--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@ org.gradle.jvmargs=-Xmx1G
 loom.platform = neoforge
 
 # Mod properties
-mod_version = 1.0.0
+mod_version = 0.1.0
 maven_group = org.teacon
 archives_name = gimmeman
 
@@ -13,3 +13,9 @@ minecraft_version = 1.21.1
 # Dependencies
 neoforge_version = 21.1.84
 yarn_mappings_patch_version = 1.21+build.4
+
+# Publishing
+mod_license = MIT
+mod_authors = Zbx1425
+mod_github_owner = TeaConMC
+mod_github_repo = GiveMeMan
